--- a/app/src/main/res/layout/qrgenerate.xml
+++ b/app/src/main/res/layout/qrgenerate.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="com.example.gurleensethi.barcodedemo.BarcodeGenerationActivity">
+    tools:context=".genqr.BarcodeGenerationActivity">
 
     <EditText
         android:id="@+id/contentEditText"
@@ -16,16 +16,24 @@
         android:hint="@string/enter_code_to_create_barcode" />
 
     <Button
-        android:id="@+id/generateButton"
+        android:id="@+id/generateBarcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/generate" />
+        android:text="@string/generatebarcode" />
+
+    <Button
+        android:id="@+id/generateQr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/generateqr" />
 
     <ImageView
         android:id="@+id/generationImageView"
         android:layout_width="match_parent"
         android:layout_marginTop="16dp"
+        android:padding="@dimen/margin_2"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
