--- a/app/src/main/res/layout/qrgenerate.xml
+++ b/app/src/main/res/layout/qrgenerate.xml
@@ -15,19 +15,29 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_code_to_create_barcode" />
 
-    <Button
-        android:id="@+id/generateBarcode"
+    <LinearLayout
+        android:id="@+id/layoutSexRelation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0">
+
+
+    <Button
+        android:id="@+id/generateBarcode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_weight="0.5"
         android:text="@string/generatebarcode" />
 
     <Button
         android:id="@+id/generateQr"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_weight="0.5"
         android:text="@string/generateqr" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/generationImageView"
